--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PancakeSwap|Develhope</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./designSystem.css">
 </head>
 <body>
-  <p>BRUH</p>  
+<div class="color">
+    <div class="purple"></div>
+    <div class="blue"></div>
+    <div class="orange"></div>
+</div>
+
 </body>
 </html>
