Design System structure done

--- a/index.html
+++ b/index.html
@@ -9,11 +9,57 @@
     <link rel="stylesheet" href="./designSystem.css">
 </head>
 <body>
-<div class="color">
-    <div class="purple"></div>
-    <div class="blue"></div>
-    <div class="orange"></div>
-</div>
+
+    <aside class="first">
+
+        <div class="color">
+            <p>--Main colors--</p>
+
+            <div>
+                 <div class="purple"></div>
+                 <pre>Main purple color, frequently used in the website
+<span>Hexadecimal: #9a6aff</span>
+                 </pre>
+            </div>
+
+            <div>
+                <div class="blue"></div>
+                <pre>Blue color, used for buttons
+<span>Hexadecimal: #1fc7d4</span>
+            </div>
+
+            <div>
+                <div class="orange"></div>
+                <pre>Orange color, mainly used for counters and text
+<span>Hexadecimal: #ffb237</span>
+            </div>
+
+        </div>
+        
+    </aside>
+
+
+    <aside class="second">
+
+
+    </aside>
+
+
+    <aside class="third">
+
+
+    </aside>
+
+    <aside class="fourth">
+
+
+    </aside>
+
+    <aside class="fifth">
+
+
+    </aside>
+
 
 </body>
 </html>
