Add another main color 'Black' as design system and as variable

--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
 
             <div>
                  <div class="purple"></div>
-                 <pre>Main purple color, frequently used in the website
-<span>Hexadecimal: #9a6aff</span>
-                 </pre>
+                 <p>Main purple color, frequently used in the website <br><span>Hexadecimal: #9a6aff</span>
+                 </p>
             </div>
 
             <div>
                 <div class="blue"></div>
-                <pre>Blue color, used for buttons
-<span>Hexadecimal: #1fc7d4</span>
+                <p>Blue color, used for buttons <br><span>Hexadecimal: #1fc7d4</span></p>
             </div>
 
             <div>
                 <div class="orange"></div>
-                <pre>Orange color, mainly used for counters and text
-<span>Hexadecimal: #ffb237</span>
+                <p>Orange color, mainly used for counters and text <br><span>Hexadecimal: #ffb237</span> </p>
+            </div>
+
+            <div>
+                <div class="black"></div>
+                <p>Black color, used on navs and cards <br><span>Hexadecimal: #27262c</span></p>
             </div>
 
         </div>
