Add button section

--- a/index.html
+++ b/index.html
@@ -195,6 +195,32 @@
         </div>
         <!-- fine parte icons Massimo Caser -->
 
+        <!-- inizio parte buttons Francesco -->
+        <p>--Website main buttons--</p>
+        <div class="buttons">
+            
+            <div>
+                <button class="bluebutton">Button</button>
+                <p>Main blue button</p>
+            </div>
+
+            <div>
+                <button class="transparent-button">Button</button>
+                <p>Transparent button</p>
+            </div>
+
+            <div>
+                <button class="arrow-bluebutton-white">Button <img src="svg/arrowright.svg" alt="arrowright"></button>
+                <p>Button and arrow <br> w/white text</p>
+            </div>
+
+            <div>
+                <button class="arrow-bluebutton-black">Button <img src="svg/arrowright.svg" alt="arrowright"></button>
+                <p>Button and arrow <br> w/black text</p>
+            </div>
+
+
+        </div>
     </aside>
 
     <aside class="fourth">
