--- a/index.html
+++ b/index.html
@@ -44,8 +44,26 @@
 
 
     <aside class="second">
-
-
+        <div class="title">
+            <h3>Title</h3> 
+            <p>Kanit</p>  
+            <p>64px</p>
+        </div>
+        <div class="subtitle">
+            <h3>Subtitle and Card</h3> 
+            <p>Kanit</p>  
+            <p>40px</p>
+        </div>
+        <div class="description">
+            <h3>Description</h3> 
+            <p>Kanit</p>  
+            <p>20px</p>
+        </div>
+        <div class="body">
+            <h3>Body and Button</h3> 
+            <p>Kanit</p>
+            <p>16px</p>
+        </div>
     </aside>
 
 
