add form to design system

--- a/index.html
+++ b/index.html
@@ -252,8 +252,43 @@
     </aside>
 
     <aside class="fifth">
-
-
+         <!--Inizio parte Giuseppe Frisella-->
+    <div class="forms">
+        <h3>FORM FIELDS</h3>
+        <form action="php" method="post" target="_blank">
+            <div class="forms_box">
+            <div class="box_1">
+                <div>
+                <label for="default">Generic field</label><br>
+                    <input type="text"  id="default" name="generic" placeholder="Search pools or token">
+                </div>
+                <div>
+                <label for="emai">Email field</label><br>
+                    <input type="email" id="email" name="active_button" placeholder="Insert Email" required>
+                </div>
+                <div>
+                <label for="inactive">Inactive button</label><br>
+                    <input type="text" id="inactive" name="inactive_button" placeholder="Inactive" disabled>
+                </div>
+            </div>
+            <div class="box_2">
+                <div>
+                <label for="password">Password form field</label><br>
+                    <input type="password" id="password" name="password" placeholder="Insert Password">
+                </div>
+                <div>
+                <label for="successful">Form with successful data input</label><br>
+                    <input type="text" id="successful" name="good_input">
+                </div>
+                <div>
+                <label for="unsuccessful">Form with unsuccessful data input</label><br>
+                    <input type="text" id="unsuccessful" name="bad_input">
+                </div>
+            </div>
+            </div>
+        </form>
+    </div>
+    <!--Fine parte Giuseppe Frisella-->
     </aside>
 
 
