Make basic HTML last-section and footer.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,112 @@
   <title>Document</title>
 </head>
 <body>
-  
+
+
+
+  <!-- Inizio sezione 7 (pre-footer) -->
+  <section class="sectionSeven">
+
+    <div class="sessionSeven-leftDiv">
+      <div class="topPancake"><picture><img srcset="assets/topPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="midPancake"><picture><img srcset="assets/midPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="bottomPancake"><picture><img srcset="assets/bottomPancake.webp" alt="webp-pancake"></picture></div>
+    </div>
+
+        <div class="sessionSeven-centralDiv">
+          <div><h2>Start in seconds.</h2></div>
+          <div><p>Connect your crypto wallet to start using the app in seconds.</p></div>
+          <div><p>No registration needed.</p></div>
+          <div><a href="#"><button>Connect Wallet</button></a></div>
+        </div>
+
+    <div class="sessionSeven-rightDiv">
+      <div class="topPancake"><picture><img srcset="assets/topPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="midPancake"><picture><img srcset="assets/midPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="bottomPancake"><picture><img srcset="assets/bottomPancake.webp" alt="webp-pancake"></picture></div>
+    </div>
+    
+  </section>
+
+  <footer>
+    <div class="topFooter">
+      <div class="topFooterSon">
+        <ul>
+          <li>ABOUT</li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Brand</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Community</a></li>
+          <li><a href="#">Litepaper</a></li>
+          <li><span>_</span></li>
+          <li><a href="#">Online Store</a></li>
+        </ul>
+      </div>
+
+      <div class="topFooterSon">
+        <ul>
+          <li>HELP</li>
+          <li><a href="#">Customer Support</a></li>
+          <li><a href="#">Troubleshooting</a></li>
+          <li><a href="#">Guides</a></li>
+        </ul>
+      </div>
+
+      <div class="topFooterSon">
+        <ul>
+          <li>ABOUT</li>
+          <li><a href="#">DEVELOPERS</a></li>
+          <li><a href="#">Github</a></li>
+          <li><a href="#">Documentation</a></li>
+          <li><a href="#">Bug Bounty</a></li>
+          <li><a href="#">Audits</a></li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+      </div>
+
+      <div class="topFooterSon"></div>
+      <picture><img src="logo-pancake/svgexport-2.svg" alt=""></picture>
+    </div>
+
+    <div class="midFooter">
+      <picture><img src="svg/twitter.svg" alt="twitterLogo"></picture>
+      <picture><img src="svg/telegram.svg" alt="telegramLogo"></picture>
+      <picture><img src="svg/reddit.svg" alt="redditLogo"></picture>
+      <picture><img src="svg/instagram.svg" alt="instagramLogo"></picture>
+      <picture><img src="svg/gitHub.svg" alt="githubLogo"></picture>
+      <picture><img src="svg/discord.svg" alt="discordLogo"></picture>
+      <picture><img src="svg/medium.svg" alt="mediumLogo"></picture>
+    </div>
+
+    <div class="bottomFooter">
+      <div class="bottomFooterLeft">
+
+        <div class="leftSide">
+
+        </div>
+
+        <div class="rightSide">
+
+        </div>
+
+      </div>
+
+      <div class="bottomFooterRight">
+        <div class="leftSide">
+          <a href="#"><picture><img src="svg/logoPancake.svg" alt="pancake-logo"></picture></a>
+        </div>
+
+        <div class="middleSide">
+          <p></p>
+        </div>
+
+        <div class="rightSide">
+          <a href="#"><button>Buy CAKE</button></a>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
