Add Html elemnts to Section 6

--- a/index.html
+++ b/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  
+  <!-- Alessio start -->
+  <div class="sezione6">
+    <div class="blocco1flex">
+      <div class="textblocco1">
+        <h2>CAKE makes our world go round.</h2>
+        <div class="paragrafo">
+          CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win it, farm it, spend it, stake it... heck,
+          you can even vote with it!
+        </div>
+        <div class="bottone&learn">
+          <button>Buy Cake</button>
+          <a href="">learn</a>
+        </div>
+      </div>
+      <div class="imgBounce">
+        <img id="top-left" src="https://pancakeswap.finance/images/home/cake/top-left@2x.webp" alt="">
+        <img id="main-img" src="https://pancakeswap.finance/images/home/cake/coin@2x.webp" alt="">
+        <img id="top-right" src="https://pancakeswap.finance/images/home/cake/top-right@2x.webp" alt="">
+        <img id="bottom-right" src="https://pancakeswap.finance/images/home/cake/bottom-right@2x.webp" alt="">
+      </div>
+    </div>
+    <div class="blocco2grid"></div>
+    <div class="quadro1">
+      <h5>Circulating Supply</h5>
+      <p>145,497,767</p>
+    </div>
+    <div class="quadro2">
+      <h5> Total supply</h5>
+      <p>312,743,776</p>
+    </div>
+    <div class="quadro3">
+      <h5> Max Supply</h5>
+      <p>750,000,000</p>
+    </div>
+    <div class="quadro4">
+      <h5>Market cap</h5>
+      <p>$450 million</p>
+    </div>
+    <div class="quadro5">
+      <h5>Burned to date</h5>
+      <p>515,797,943</p>
+    </div>
+    <div class="quadro6">
+      <h5>Current emissions</h5>
+      <p>13.75/block</p>
+    </div>
+  </div>
 </body>
+
 </html>
