--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     </div>
     
   </section>
+  <!-- fine pre-footer -->
+
+  <!-- Inizio sezione 7 (footer) -->
 
   <footer>
     <div class="topFooter">
@@ -113,6 +116,6 @@
       </div>
     </div>
   </footer>
-
+  <!-- fine footer -->
 </body>
 </html>
