--- a/index.html
+++ b/index.html
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- section Fabio -->
+    <div class="img-graph">
+      <img
+        id="arrow"
+        src="https://pancakeswap.finance/images/home/earn/stonks@2x.webp"
+        alt=""
+      />
+      <img
+        id="cake"
+        src="https://pancakeswap.finance/images/home/earn/pie@2x.webp"
+        alt=""
+      />
+      <img
+        id="folder"
+        src="https://pancakeswap.finance/images/home/earn/folder@2x.webp"
+        alt=""
+      />
+    </div>
+    <h2 id="title-par">Earn passive income with crypto.</h2>
+    <div id="subtitle-par">
+      PancakeSwap makes it easy to make your crypto work for you.
+    </div>
+    <div class="btn-links">
+      <button>Explore</button>
+      <a href="#">Learn</a>
+    </div>
+    <div class="title-res-data">
+      Top Farms
+      <button><img src="./svg/doubleArrow.svg" alt="" /></button>
+    </div>
+    <div class="res-data">
+      <div id="subtitle-res-data">
+        <h5>OLE-BUSD LP</h5>
+        <p>195.496%</p>
+        <p>APR</p>
+      </div>
+
+      <div id="subtitle2-res-data">
+        <h5>TRIVIA-BNB LP</h5>
+        <p>178.866%</p>
+        <p>APR</p>
+      </div>
+
+      <div id="subtitle3-res-data">
+        <h5>BTCST-BNB LP</h5>
+        <p>117.474%</p>
+        <p>APR</p>
+      </div>
+
+      <div id="subtitle4-res-data">
+        <h5>BTCST-BNB LP</h5>
+        <p>117.474%</p>
+        <p>APR</p>
+      </div>
+
+      <div id="subtitle5-res-data">
+        <h5>SDAO-BUSD LP</h5>
+        <p>92.448%</p>
+        <p>APR</p>
+      </div>
+
+      <div id="subtitle6-res-data">
+        <h5>DUET-CAKE LP</h5>
+        <p>90.325%</p>
+        <p>APR</p>
+      </div>
+    </div>
+  </body>
 </html>
