--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -24,10 +25,11 @@
         </div>
       </div>
       <div class="imgBounce">
-        <img id="top-left" src="https://pancakeswap.finance/images/home/cake/top-left@2x.webp" alt="">
-        <img id="main-img" src="https://pancakeswap.finance/images/home/cake/coin@2x.webp" alt="">
-        <img id="top-right" src="https://pancakeswap.finance/images/home/cake/top-right@2x.webp" alt="">
-        <img id="bottom-right" src="https://pancakeswap.finance/images/home/cake/bottom-right@2x.webp" alt="">
+        <img width="180px" id="top-left" src="https://pancakeswap.finance/images/home/cake/top-left@2x.webp" alt="">
+        <img width="180px" id="main-img" src="https://pancakeswap.finance/images/home/cake/coin@2x.webp" alt="">
+        <img width="180px" id="top-right" src="https://pancakeswap.finance/images/home/cake/top-right@2x.webp" alt="">
+        <img width="180px" id="bottom-right" src="https://pancakeswap.finance/images/home/cake/bottom-right@2x.webp"
+          alt="">
       </div>
     </div>
     <div class="blocco2grid"></div>
