--- a/index.html
+++ b/index.html
@@ -7,6 +7,85 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <!-- Inizio sezione 2 Giuseppe-->
+  <section>
+    <div class="entire_section">
+        <div class="svg_container">
+            
+        </div>
+        <div class="header1">
+            <p>Used by millions.</p>
+        </div>
+        <div class="header2">
+            <p>Trusted with billions.</p>
+        </div>
+        <div class="text1">
+            <p>PancakeSwap has the most users of any decentralized platform, ever.</p>
+        </div>
+        <div class="text2">
+            <p>And those users are now entrusting the platform with over $3.5 billion in funds.</p>
+        </div>
+        <div class="text3">
+            <p>Will you join them?</p>
+        </div>
+        <div class="cards">
+            <div class="firstcard">
+                <div class="upper_section">
+                    <div class="svg">
+
+                    </div>
+                </div>
+                <div class="lower_section">
+                    <div class="lower1">
+                        <p>2.3 million</p>
+                    </div>
+                    <div class="lower2">
+                        <p>users</p>
+                    </div>
+                    <div class="lower3">
+                        <p>in the last 30 days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="secondcard">
+                <div class="upper_section">
+                    <div class="svg">
+
+                    </div>
+                </div>
+                <div class="lower_section">
+                    <div class="lower1">
+                        <p>27 million</p>
+                    </div>
+                    <div class="lower2">
+                        <p>trades</p>
+                    </div>
+                    <div class="lower3">
+                        <p>made in the last 30 days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thirdcard">
+                <div class="upper_section">
+                    <div class="svg">
+
+                    </div>
+                </div>
+                <div class="lower_section">
+                    <div class="lower1">
+                        <p>$3.5 billion</p>
+                    </div>
+                    <div class="lower2">
+                        <p>staked</p>
+                    </div>
+                    <div class="lower3">
+                        <p>Total Value Locked</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Fine sezione 2 Giuseppe-->
 </body>
 </html>
