--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.Sec6.css">
 </head>
 
 <body>
@@ -14,14 +14,16 @@
   <div class="sezione6">
     <div class="blocco1flex">
       <div class="textblocco1">
-        <h2>CAKE makes our world go round.</h2>
+        <h2><span>CAKE</span> makes our world go round.</h2>
         <div class="paragrafo">
           CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win it, farm it, spend it, stake it... heck,
           you can even vote with it!
         </div>
-        <div class="bottone&learn">
-          <button>Buy Cake</button>
-          <a href="">learn</a>
+        <div class="bottone-learn">
+          <button>
+            <p>Buy Cake</p>
+          </button>
+          <a id="learn" href="">Learn</a>
         </div>
       </div>
       <div class="imgBounce">
@@ -32,30 +34,31 @@
           alt="">
       </div>
     </div>
-    <div class="blocco2grid"></div>
-    <div class="quadro1">
-      <h5>Circulating Supply</h5>
-      <p>145,497,767</p>
-    </div>
-    <div class="quadro2">
-      <h5> Total supply</h5>
-      <p>312,743,776</p>
-    </div>
-    <div class="quadro3">
-      <h5> Max Supply</h5>
-      <p>750,000,000</p>
-    </div>
-    <div class="quadro4">
-      <h5>Market cap</h5>
-      <p>$450 million</p>
-    </div>
-    <div class="quadro5">
-      <h5>Burned to date</h5>
-      <p>515,797,943</p>
-    </div>
-    <div class="quadro6">
-      <h5>Current emissions</h5>
-      <p>13.75/block</p>
+    <div class="blocco2grid">
+      <div class="quadro1">
+        <h5>Circulating Supply</h5>
+        <p>145,497,767</p>
+      </div>
+      <div class="quadro2">
+        <h5> Total supply</h5>
+        <p>312,743,776</p>
+      </div>
+      <div class="quadro3">
+        <h5> Max Supply</h5>
+        <p>750,000,000</p>
+      </div>
+      <div class="quadro4">
+        <h5>Market cap</h5>
+        <p>$450 million</p>
+      </div>
+      <div class="quadro5">
+        <h5>Burned to date</h5>
+        <p>515,797,943</p>
+      </div>
+      <div class="quadro6">
+        <h5>Current emissions</h5>
+        <p>13.75/block</p>
+      </div>
     </div>
   </div>
   <!-- End Alessio -->
