--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
@@ -25,7 +26,7 @@
         alt=""
       />
     </div>
-    <h2 id="title-par">Earn passive income with crypto.</h2>
+    <h2 id="title-par"><span>Earn</span> passive income with crypto.</h2>
     <div id="subtitle-par">
       PancakeSwap makes it easy to make your crypto work for you.
     </div>
