--- a/index.html
+++ b/index.html
@@ -9,30 +9,34 @@
   </head>
   <body>
     <!-- section Fabio -->
-    <div class="img-graph">
-      <img
-        id="arrow"
-        src="https://pancakeswap.finance/images/home/earn/stonks@2x.webp"
-        alt=""
-      />
-      <img
-        id="cake"
-        src="https://pancakeswap.finance/images/home/earn/pie@2x.webp"
-        alt=""
-      />
-      <img
-        id="folder"
-        src="https://pancakeswap.finance/images/home/earn/folder@2x.webp"
-        alt=""
-      />
-    </div>
-    <h2 id="title-par"><span>Earn</span> passive income with crypto.</h2>
-    <div id="subtitle-par">
-      PancakeSwap makes it easy to make your crypto work for you.
-    </div>
-    <div class="btn-links">
-      <button>Explore</button>
-      <a href="#">Learn</a>
+    <div class="img-text">
+      <div class="img-motion">
+        <img
+          id="arrow"
+          src="https://pancakeswap.finance/images/home/earn/stonks@2x.webp"
+          alt=""
+        />
+        <img
+          id="cake"
+          src="https://pancakeswap.finance/images/home/earn/pie@2x.webp"
+          alt=""
+        />
+        <img
+          id="folder"
+          src="https://pancakeswap.finance/images/home/earn/folder@2x.webp"
+          alt=""
+        />
+      </div>
+      <div class="text">
+        <h2 id="title-par"><span>Earn</span> passive income with crypto.</h2>
+        <div id="subtitle-par">
+          PancakeSwap makes it easy to make your crypto work for you.
+        </div>
+        <div class="btn-links">
+          <button>Explore</button>
+          <a href="#">Learn</a>
+        </div>
+      </div>
     </div>
     <div class="title-res-data">
       Top Farms
