--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       </div>
     </div>
     <div class="title-res-data">
-      Top Farms
-      <button><img src="./svg/doubleArrow.svg" alt="" /></button>
+      Top<span>Farms</span>
+      <button><img src="./resources/svg/doubleArrow.svg" alt="" /></button>
     </div>
     <div class="res-data">
       <div id="subtitle-res-data">
@@ -49,31 +49,31 @@
         <p>APR</p>
       </div>
 
-      <div id="subtitle2-res-data">
+      <div id="subtitle-res-data">
         <h5>TRIVIA-BNB LP</h5>
         <p>178.866%</p>
         <p>APR</p>
       </div>
 
-      <div id="subtitle3-res-data">
+      <div id="subtitle-res-data">
         <h5>BTCST-BNB LP</h5>
         <p>117.474%</p>
         <p>APR</p>
       </div>
 
-      <div id="subtitle4-res-data">
+      <div id="subtitle-res-data">
         <h5>BTCST-BNB LP</h5>
         <p>117.474%</p>
         <p>APR</p>
       </div>
 
-      <div id="subtitle5-res-data">
+      <div id="subtitle-res-data">
         <h5>SDAO-BUSD LP</h5>
         <p>92.448%</p>
         <p>APR</p>
       </div>
 
-      <div id="subtitle6-res-data">
+      <div id="subtitle-res-data">
         <h5>DUET-CAKE LP</h5>
         <p>90.325%</p>
         <p>APR</p>
