--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.Sec6.css">
+  <link rel="stylesheet" href="styleSec6.css">
 </head>
 
 <body>
@@ -27,11 +27,13 @@
         </div>
       </div>
       <div class="imgBounce">
-        <img width="180px" id="top-left" src="https://pancakeswap.finance/images/home/cake/top-left@2x.webp" alt="">
-        <img width="180px" id="main-img" src="https://pancakeswap.finance/images/home/cake/coin@2x.webp" alt="">
-        <img width="180px" id="top-right" src="https://pancakeswap.finance/images/home/cake/top-right@2x.webp" alt="">
-        <img width="180px" id="bottom-right" src="https://pancakeswap.finance/images/home/cake/bottom-right@2x.webp"
-          alt="">
+        <figure>
+          <img width="180px" id="top-left" src="https://pancakeswap.finance/images/home/cake/top-left@2x.webp" alt="">
+          <img width="300px" id="main-img" src="https://pancakeswap.finance/images/home/cake/coin@2x.webp" alt="">
+          <img width="180px" id="top-right" src="https://pancakeswap.finance/images/home/cake/top-right@2x.webp" alt="">
+          <img width="180px" id="bottom-right" src="https://pancakeswap.finance/images/home/cake/bottom-right@2x.webp"
+            alt="">
+        </figure>
       </div>
     </div>
     <div class="blocco2grid">
