--- a/index.html
+++ b/index.html
@@ -6,26 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <title>Document</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
+      defer
+    ></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <!-- section Fabio -->
     <div class="img-text">
       <div class="img-motion">
-        <img
-          id="arrow"
-          src="https://pancakeswap.finance/images/home/earn/stonks@2x.webp"
-          alt=""
-        />
-        <img
-          id="cake"
-          src="https://pancakeswap.finance/images/home/earn/pie@2x.webp"
-          alt=""
-        />
-        <img
-          id="folder"
-          src="https://pancakeswap.finance/images/home/earn/folder@2x.webp"
-          alt=""
-        />
+        <figure>
+          <img
+            id="arrow"
+            src="https://pancakeswap.finance/images/home/earn/stonks@2x.webp"
+            alt=""
+          />
+          <img
+            id="cake"
+            src="https://pancakeswap.finance/images/home/earn/pie@2x.webp"
+            alt=""
+          />
+          <img
+            id="folder"
+            src="https://pancakeswap.finance/images/home/earn/folder@2x.webp"
+            alt=""
+          />
+        </figure>
       </div>
       <div class="text">
         <h2 id="title-par"><span>Earn</span> passive income with crypto.</h2>
@@ -43,7 +50,7 @@
       <button><img src="./resources/svg/doubleArrow.svg" alt="" /></button>
     </div>
     <div class="res-data">
-      <div id="subtitle-res-data">
+      <div id="sub-res-data">
         <h5>OLE-BUSD LP</h5>
         <p>195.496%</p>
         <p>APR</p>
