--- a/index.html
+++ b/index.html
@@ -6,85 +6,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <title>Document</title>
+  </head>
+  <body>
+    <div class="sectionSix">
+      <!-- section Fabio -->
+      <div class="img-text">
+        <div class="img-motion">
+          <figure>
+            <img
+              id="arrow"
+              src="https://pancakeswap.finance/images/home/earn/stonks@2x.webp"
+              alt=""
+            />
+          </figure>
+          <figure>
+            <img
+              id="cake"
+              src="https://pancakeswap.finance/images/home/earn/pie@2x.webp"
+              alt=""
+            />
+          </figure>
+          <figure>
+            <img
+              id="folder"
+              src="https://pancakeswap.finance/images/home/earn/folder@2x.webp"
+              alt=""
+            />
+          </figure>
+        </div>
+        <div class="text">
+          <h2 id="title-par"><span>Earn</span> passive income with crypto.</h2>
+          <div id="subtitle-par">
+            PancakeSwap makes it easy to make your crypto work for you.
+          </div>
+          <div class="btn-links">
+            <button>Explore</button>
+            <a href="#">Learn</a>
+          </div>
+        </div>
+      </div>
+      <div class="title-res-data">
+        Top<span>Farms</span>
+        <button>
+          <svg>
+            <path
+              d="M16 17.01V11C16 10.45 15.55 10 15 10C14.45 10 14 10.45 14 11V17.01H12.21C11.76 17.01 11.54 17.55 11.86 17.86L14.65 20.64C14.85 20.83 15.16 20.83 15.36 20.64L18.15 17.86C18.47 17.55 18.24 17.01 17.8 17.01H16ZM8.65003 3.35002L5.86003 6.14002C5.54003 6.45002 5.76003 6.99002 6.21003 6.99002H8.00003V13C8.00003 13.55 8.45003 14 9.00003 14C9.55003 14 10 13.55 10 13V6.99002H11.79C12.24 6.99002 12.46 6.45002 12.14 6.14002L9.35003 3.35002C9.16003 3.16002 8.84003 3.16002 8.65003 3.35002Z"
+            ></path>
+          </svg>
+        </button>
+      </div>
+      <div class="res-data">
+        <div id="sub-res-data">
+          <h6>OLE-BUSD LP</h6>
+          <p>195.496%</p>
+          <p>APR</p>
+        </div>
+
+        <div id="subtitle-res-data">
+          <h6>TRIVIA-BNB LP</h6>
+          <p>178.866%</p>
+          <p>APR</p>
+        </div>
+
+        <div id="subtitle-res-data">
+          <h6>BTCST-BNB LP</h6>
+          <p>117.474%</p>
+          <p>APR</p>
+        </div>
+
+        <div id="subtitle-res-data">
+          <h6>BTCST-BNB LP</h6>
+          <p>117.474%</p>
+          <p>APR</p>
+        </div>
+
+        <div id="subtitle-res-data">
+          <h6>SDAO-BUSD LP</h6>
+          <p>92.448%</p>
+          <p>APR</p>
+        </div>
+
+        <div id="subtitle-res-data">
+          <h6>DUET-CAKE LP</h6>
+          <p>90.325%</p>
+          <p>APR</p>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
       defer
     ></script>
-    <script src="index.js"></script>
-  </head>
-  <body>
-    <!-- section Fabio -->
-    <div class="img-text">
-      <div class="img-motion">
-        <figure>
-          <img
-            id="arrow"
-            src="https://pancakeswap.finance/images/home/earn/stonks@2x.webp"
-            alt=""
-          />
-          <img
-            id="cake"
-            src="https://pancakeswap.finance/images/home/earn/pie@2x.webp"
-            alt=""
-          />
-          <img
-            id="folder"
-            src="https://pancakeswap.finance/images/home/earn/folder@2x.webp"
-            alt=""
-          />
-        </figure>
-      </div>
-      <div class="text">
-        <h2 id="title-par"><span>Earn</span> passive income with crypto.</h2>
-        <div id="subtitle-par">
-          PancakeSwap makes it easy to make your crypto work for you.
-        </div>
-        <div class="btn-links">
-          <button>Explore</button>
-          <a href="#">Learn</a>
-        </div>
-      </div>
-    </div>
-    <div class="title-res-data">
-      Top<span>Farms</span>
-      <button><img src="./resources/svg/doubleArrow.svg" alt="" /></button>
-    </div>
-    <div class="res-data">
-      <div id="sub-res-data">
-        <h5>OLE-BUSD LP</h5>
-        <p>195.496%</p>
-        <p>APR</p>
-      </div>
-
-      <div id="subtitle-res-data">
-        <h5>TRIVIA-BNB LP</h5>
-        <p>178.866%</p>
-        <p>APR</p>
-      </div>
-
-      <div id="subtitle-res-data">
-        <h5>BTCST-BNB LP</h5>
-        <p>117.474%</p>
-        <p>APR</p>
-      </div>
-
-      <div id="subtitle-res-data">
-        <h5>BTCST-BNB LP</h5>
-        <p>117.474%</p>
-        <p>APR</p>
-      </div>
-
-      <div id="subtitle-res-data">
-        <h5>SDAO-BUSD LP</h5>
-        <p>92.448%</p>
-        <p>APR</p>
-      </div>
-
-      <div id="subtitle-res-data">
-        <h5>DUET-CAKE LP</h5>
-        <p>90.325%</p>
-        <p>APR</p>
-      </div>
-    </div>
+    <script src="script.js"></script>
   </body>
 </html>
