dark-mode side end, add language hover and focus, add night mode button toggle and border on hover

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -19,7 +19,7 @@
     <div class="sectionSeven-leftDiv">
       <div style ="z-index: 1" class="topPancake pancakeLoop1"><picture><img srcset="../assets-section7/topPancake.webp" alt="webp-pancake"></picture></div>
       <div class="midPancake pancakeLoop2"><picture><img srcset="../assets-section7/midPancake.webp" alt="webp-pancake"></picture></div>
-      <div class="bottomPancake pancakeLoop1"><picture><img srcset="../assets-section7/bottomPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="bottomPancake pancakeLoop3"><picture><img srcset="../assets-section7/bottomPancake.webp" alt="webp-pancake"></picture></div>
     </div>
 
      <div class="sectionSeven-centralDiv">
@@ -30,9 +30,9 @@
       </div>
 
     <div class="sectionSeven-rightDiv">
-      <div class="topPancake pancakeLoop1"><picture><img srcset="../assets-section7/topPancake.webp" alt="webp-pancake"></picture></div>
-      <div class="midPancake pancakeLoop1"><picture><img srcset="../assets-section7/midPancake.webp" alt="webp-pancake"></picture></div>
-      <div class="bottomPancake pancakeLoop2"><picture><img srcset="../assets-section7/bottomPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="topPancake pancakeLoop4"><picture><img srcset="../assets-section7/topPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="midPancake pancakeLoop5"><picture><img srcset="../assets-section7/midPancake.webp" alt="webp-pancake"></picture></div>
+      <div class="bottomPancake pancakeLoop6"><picture><img srcset="../assets-section7/bottomPancake.webp" alt="webp-pancake"></picture></div>
     </div>
     
   </section>
@@ -94,9 +94,9 @@
     <div class="bottomFooter">
       <div class="bottomFooterLeft">
 
-        <div class="leftSide">
+        <div class="leftSide">  
+        <div class="slider"></div>
           <div class="lightMode">
-            <div class="slider"></div>
             <img src="../resources/svg/lightModeLogo.svg" alt="light mode logo">
           </div>
 
@@ -105,7 +105,7 @@
           </div>
         </div>
 
-        <div class="rightSide">
+        <div class="rightSide" tabindex="0">
           <div class="showedSide">
           <img src="../resources/svg/logoNET.svg" alt="net logo">
           <p>EN</p>
@@ -145,7 +145,7 @@
 
       <div class="bottomFooterRight">
         <div class="leftSide">
-          <a href="#"><picture><img src="../resources/svg/logoPancake.svg" alt="pancake-logo"></picture>$3.241</a>
+          <a href="#"><img src="../resources/svg/logoPancake.svg" alt="pancake-logo"><div id="price"></div></a>
         </div>
 
         <div class="rightSide">
