--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <div class="blocco2grid">
       <div class="quadro1">
         <h5>Circulating Supply</h5>
-        <p>145,497,767</p>
+        <p id="circulating_supply">145,497,767</p>
       </div>
       <div class="quadro2">
         <h5> Total supply</h5>
-        <p>312,743,776</p>
+        <p id="total_supply">312,743,776</p>
       </div>
       <div class="quadro3">
         <h5> Max Supply</h5>
@@ -53,7 +53,7 @@
       </div>
       <div class="quadro4">
         <h5>Market cap</h5>
-        <p>$450 million</p>
+        <p id="market_cap">$450 million</p>
       </div>
       <div class="quadro5">
         <h5>Burned to date</h5>
