--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
       defer
     ></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
