--- a/index.html
+++ b/index.html
@@ -57,41 +57,66 @@
       </div>
       <div class="res-data">
         <div id="sub-res-data">
-          <h6>OLE-BUSD LP</h6>
+          <h6>SHELL-BUSD LP</h6>
           <p>195.496%</p>
           <p>APR</p>
         </div>
 
         <div id="subtitle-res-data">
-          <h6>TRIVIA-BNB LP</h6>
+          <h6>XCAD-BUSD LP</h6>
           <p>178.866%</p>
           <p>APR</p>
         </div>
 
         <div id="subtitle-res-data">
-          <h6>BTCST-BNB LP</h6>
+          <h6>HOTCROSS-BNB LP</h6>
           <p>117.474%</p>
           <p>APR</p>
         </div>
 
         <div id="subtitle-res-data">
-          <h6>BTCST-BNB LP</h6>
+          <h6>HIGH-BUSD LP</h6>
           <p>117.474%</p>
           <p>APR</p>
         </div>
 
         <div id="subtitle-res-data">
-          <h6>SDAO-BUSD LP</h6>
+          <h6>OLE-BUSD LP</h6>
           <p>92.448%</p>
           <p>APR</p>
         </div>
-
-        <div id="subtitle-res-data">
-          <h6>DUET-CAKE LP</h6>
-          <p>90.325%</p>
-          <p>APR</p>
+      </div>
+      
+      <div class="hidden">
+        <div id="res-data-hidden">
+          <div id="sub-res-data-hidden">
+            <h6>Stake CAKE</h6>
+            <p>Up to 82.760%</p>
+            <p>APY</p>
+          </div>
+          <div id="subtitle-res-data-hidden">
+            <h6>Stake CAKE - Earn HIGH</h6>
+            <p></p>
+            <p></p>
+          </div>
+          <div id="subtitle-res-data-hidden">
+            <h6>Stake CAKE - Earn OLE</h6>
+            <p></p>
+            <p></p>
+          </div>
+          <div id="subtitle-res-data-hidden">
+            <h6>Stake CAKE - Earn TRIVIA</h6>
+            <p></p>
+            <p></p>
+          </div>
+          <div id="subtitle-res-data-hidden">
+            <h6>Stake CAKE - Earn SDAO</h6>
+            <p></p>
+            <p></p>
+          </div>
         </div>
       </div>
+      
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
