--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <p>APR</p>
             </div>
           </div>
-          <div class="hidden">
+          <!-- <div class="hidden"> -->
             <div id="res-data-hidden">
               <div id="sub-res-data-hidden">
                 <h6>Stake CAKE</h6>
@@ -120,7 +120,7 @@
                 <p>APR</p>
               </div>
             </div>
-          </div>
+          <!-- </div> -->
         </div>
       </div>
     </div>
